# market-decision-engine

./: LICENSE  README.md
market_data_pipeline/: .gitignore  docker-compose.yml  docker_commands_reference.txt  dockerfile  focus.md  main.py  pyproject.toml  requirements.txt
market_data_pipeline/.devcontainer/: devcontainer.json
market_data_pipeline/backend/: app.py
market_data_pipeline/backend/models/: ohlcv_db.py
market_data_pipeline/backend/routers/: performance.py  quotes.py  update.py
market_data_pipeline/backend/routes/: quotes.py
market_data_pipeline/backend/schemas/: schemas.py
market_data_pipeline/backend/services/: calculation.py  ohlcv.py
market_data_pipeline/frontend/: index.html
market_data_pipeline/frontend/src/: container_1.js  container_1_dropdown.js
market_data_pipeline/frontend/styles/: container-1.css  global_style.css
