[project]
name = "market-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "typing>=3.10.0.0",
    "uvicorn>=0.40.0",
    "yfinance>=1.0",
]
